--- a/changelog.org
+++ b/changelog.org
@@ -2,6 +2,20 @@
 
 All notable changes to this project will be documented in this file.
 
+** <2019-10-26 Sat>
+
+*** Added
+    - As a user, when I swipe a header, I want the icon to contrast
+      the background, so that better see the action taken
+      - Thank you [[https://github.com/ragone][@ragone]] for your [[https://github.com/200ok-ch/organice/pull/78][PR]]!
+    - As a user, when I hover a clickable element, I want my cursor to
+    change, so that I can see that it is clickable.
+      - Thank you [[https://github.com/ragone][@ragone]] for your [[https://github.com/200ok-ch/organice/pull/79][PR]]!
+
+*** Fixed
+    - Do not throw an error when clearing a planning item
+      - Thank you [[https://github.com/ragone][@ragone]] for your [[https://github.com/200ok-ch/organice/pull/81][PR]]!
+
 ** <2019-10-02 Wed>
 
 *** Fixed
