--- a/README.org
+++ b/README.org
@@ -14,13 +14,13 @@ Dependency management: [[https://greenkeeper.io/][file:https://badges.greenkeepe
 
 organice is an implementation of [[http://orgmode.org/][Org mode]] without the dependency of
 [[https://www.gnu.org/software/emacs/][Emacs]]. It is built for mobile and desktop browsers and syncs with
-Dropbox and Google Drive.
+Dropbox, Google Drive and WebDAV.
 
 At [[https://200ok.ch/][200ok]], we run an instance of organice at https://organice.200ok.ch,
 which is open for anyone to use! organice does not have a back-end
-(it's just a front-end application, which uses either Dropbox or
-Google Drive as back-end storage). We don't store any kind of data on
-our servers - we also don't use analytics on organice.200ok.ch.
+(it's just a front-end application, which uses either Dropbox, Google
+Drive or WebDAV as back-end storage). We don't store any kind of data
+on our servers - we also don't use analytics on organice.200ok.ch.
 
 [[./images/screenshot--overview.png]]
 
@@ -136,6 +136,71 @@ URL as =Redirect URI=.
 To configure your own application on Google Drive, please generate an
 API key as described on [[https://developers.google.com/drive/api/v3/quickstart/js][this page]].
 
+**** WebDAV
+
+For testing purposes, here are the instructions to setup WebDAV
+locally on your machine using Apache2 using Debian. These instructions
+are not meant to be used in production, though.
+
+*Initial package installation*
+
+#+BEGIN_SRC shell
+sudo apt -y install apache2-utils apache2
+#+END_SRC
+
+*Set up a new vhost for webdav*
+
+=/etc/apache2/sites-available/webdav.conf=
+
+#+BEGIN_EXAMPLE
+Alias /webdav /srv/dav/
+
+RewriteEngine On
+RewriteCond %{REQUEST_METHOD} OPTIONS
+RewriteRule ^(.*)$ $1 [R=200,L]
+
+<Location /webdav>
+    Options Indexes
+    DAV On
+    AuthType Basic
+    AuthName "webdav"
+    AuthUserFile /srv/dav/.htpasswd
+    Require valid-user
+
+    Header always set Access-Control-Allow-Origin "*"
+    Header always set Access-Control-Allow-Methods "GET,POST,OPTIONS,DELETE,PUT,PROPFIND"
+    Header always set Access-Control-Allow-Headers "Origin,Accept,X-Requested-With,Content-Type,Access-Control-Request-Method,Access-Control-Request-Headers,Authorization,X-CSRF-Token,Depth"
+    Header always set Access-Control-Allow-Credentials true
+
+    Require all granted
+</location>
+#+END_EXAMPLE
+
+*Enable Apache modules*
+
+#+BEGIN_SRC shell
+sudo a2enmod headers
+sudo a2enmod dav*
+sudo a2enmod rewrite
+sudo a2ensite webdav
+#+END_SRC
+
+*Setup folder, password and rights*
+
+#+BEGIN_SRC shell
+sudo mkdir /srv/dav
+sudo htpasswd -c /srv/dav/.htpasswd webdav
+sudo chmod 770 /srv/dav; sudo chown www-data. /srv/dav
+sudo service apache2 restart
+#+END_SRC
+
+*Test webdav access using a commandline tool*
+
+#+BEGIN_SRC shell
+sudo apt -y install cadaver
+cadaver http://localhost/webdav/
+#+END_SRC
+
 
 *** Contributions
 
@@ -214,71 +279,6 @@ RewriteRule ^ - [L]
 
 RewriteRule ^ /index.html [L]
 #+END_EXAMPLE
-
-*** WebDAV
-
-For testing purposes, here are the instructions to setup WebDAV
-locally on your machine using Apache2 using Debian. These instructions
-are not meant to be used in production, though.
-
-*Initial package installation*
-
-#+BEGIN_SRC shell
-sudo apt -y install apache2-utils apache2
-#+END_SRC
-
-*Set up a new vhost for webdav*
-
-=/etc/apache2/sites-available/webdav.conf=
-
-#+BEGIN_EXAMPLE
-Alias /webdav /srv/dav/
-
-RewriteEngine On
-RewriteCond %{REQUEST_METHOD} OPTIONS
-RewriteRule ^(.*)$ $1 [R=200,L]
-
-<Location /webdav>
-    Options Indexes
-    DAV On
-    AuthType Basic
-    AuthName "webdav"
-    AuthUserFile /srv/dav/.htpasswd
-    Require valid-user
-
-    Header always set Access-Control-Allow-Origin "*"
-    Header always set Access-Control-Allow-Methods "GET,POST,OPTIONS,DELETE,PUT,PROPFIND"
-    Header always set Access-Control-Allow-Headers "Origin,Accept,X-Requested-With,Content-Type,Access-Control-Request-Method,Access-Control-Request-Headers,Authorization,X-CSRF-Token,Depth"
-    Header always set Access-Control-Allow-Credentials true
-
-    Require all granted
-</location>
-#+END_EXAMPLE
-
-*Enable Apache modules*
-
-#+BEGIN_SRC shell
-sudo a2enmod headers
-sudo a2enmod dav*
-sudo a2enmod rewrite
-sudo a2ensite webdav
-#+END_SRC
-
-*Setup folder, password and rights*
-
-#+BEGIN_SRC shell
-sudo mkdir /srv/dav
-sudo htpasswd -c /srv/dav/.htpasswd webdav
-sudo chmod 770 /srv/dav; sudo chown www-data. /srv/dav
-sudo service apache2 restart
-#+END_SRC
-
-*Test webdav access using a commandline tool*
-
-#+BEGIN_SRC shell
-sudo apt -y install cadaver
-cadaver http://localhost/webdav/
-#+END_SRC
 
 ** Capture templates
 
@@ -419,6 +419,7 @@ organice differs from org-web in that:
 - It has many bug fixes (for example on parsing and exporting org
   files) compared to its ancestry.
 - It continues to evolve independently with it's own feature set.
+  - For example: organice has WebDAV support.
 - It is a project with equal focus on mobile as desktop browsers.
 - org-web [[https://github.com/DanielDe/org-web/issues/75][tracks users]] with Google Analytics. organice [[https://github.com/200ok-ch/organice/issues/41][does not]].
 
