doc: Wording regarding 'customization'

--- a/README.org
+++ b/README.org
@@ -98,8 +98,8 @@ based files on multiple machines in parallel.
 
 **** General
 
-Since organice implements Org mode, one might wonder if organice plans
-to duplicate Emacs configuration strategy. In Emacs Org mode, there's
+Since organice implements Org mode, one might wonder if we plan to
+duplicate the Emacs configuration strategy. In Emacs Org mode, there's
 more than [[https://orgmode.org/manual/Customization.html#Customization][500 variables for customization]] - and on top of that,
 there's often two ways to configure things:
 
@@ -107,13 +107,14 @@ there's often two ways to configure things:
 2. Using [[https://orgmode.org/manual/In_002dbuffer-settings.html][in-buffer settings]]
 
 Modifying Org behavior using elisp (variables) is certainly mighty and
-powerful. However, the current goal of organice is not to clone Emacs
-in full. In fact, I'd argue that this is impossible. Emacs being a
-LISP machine has inherent power that cannot be copied. The goal is to
-make Org mode accessible for smartphones and for non-Emacs users. For
-both use-cases, elisp variable configuration is not really suitable.
+powerful. However, the goal of organice is not to clone Emacs in full.
+In fact, it could be argued that this is not possible. Emacs being a
+LISP machine has inherent power that cannot be brought to a web
+application. Instead, the goal is to make Org mode accessible on
+smartphones and for non-Emacs users. For both use-cases, elisp
+variable configuration is not an idiomatic or ergonomic option.
 
-organice uses this customization strategy:
+organice implements this customization strategy:
 
 - Use in-buffer settings where appropriate
 - Build custom and mobile friendly user interfaces where appropriate
@@ -127,7 +128,7 @@ organice uses this customization strategy:
 **** Other customizations
 
 For some customizations, organice exposes a mobile friendly user
-interface. Please find them in the 'settings' view (cogs item in the
+interface. Please find them in the 'settings' view (cogs icon in the
 header on the right).
 
 [[./images/screenshot-settings.png]]
