Don't put newlines after headers with no content, add newline at EOF

--- a/test_helpers/fixtures/all_the_features.org
+++ b/test_helpers/fixtures/all_the_features.org
@@ -89,6 +89,7 @@ ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in
 ea voluptate velit esse quam nihil molestiae consequatur, vel illum
 qui dolorem eum fugiat quo voluptas nulla pariatur?"
 
+** Testing
 ** Something with logbook
    :LOGBOOK:
    CLOCK: [2019-11-13 Wed 13:12]--[2019-11-13 Wed 13:12] =>  0:00
