--- a/README.org
+++ b/README.org
@@ -120,14 +120,27 @@ organice implements this customization strategy:
 - Build custom and mobile friendly user interfaces where appropriate
   - For example [[*Capture templates][Capture templates]]
 
-**** Supported in-buffer settings
+**** Supported in-buffer configuration
 
-- =#+TODO=
-- =#+TYP_TODO=
+***** In-buffer settings
 
-=#+STARTUP:= options:
+ - =#+TODO=
+ - =#+TYP_TODO=
 
-- =nologrepeat=: Do not record when reinstating repeating item
+***** =#+STARTUP:= options
+
+ - =nologrepeat=: Do not record when reinstating repeating item
+
+***** Drawer properties
+
+- =logrepeat= and =nologrepeat=: Whether to record when reinstating repeating item
+
+#+BEGIN_EXAMPLE
+   :PROPERTIES:
+   :LOGGING:  logrepeat
+   :END:
+#+END_EXAMPLE
+
 
 **** Other customizations
 
