--- a/sample.org
+++ b/sample.org
@@ -173,14 +173,17 @@ organice has native support for viewing and editing property lists. To bring up 
 * Planning
 organice has native support for adding and editing DEADLINE and SCHEDULED items. It also supports [[https://orgmode.org/manual/Repeated-tasks.html][repeaters]] and [[https://orgmode.org/manual/Deadlines-and-scheduling.html#Deadlines-and-scheduling][delays]]. Check out these examples:
 ** An item with a deadline
-DEADLINE: <2018-10-03 Wed>
+   DEADLINE: <2018-10-03 Wed>
 ** An item that is scheduled
-SCHEDULED: <2018-10-18 Thu>
+   SCHEDULED: <2018-10-18 Thu>
 ** An item with both
-DEADLINE: <2018-10-02 Tue>
-SCHEDULED: <2018-10-02 Tue>
+   DEADLINE: <2018-10-05 Fri> SCHEDULED: <2018-10-04 Thu>
 ** TODO An item with a repeater - try swiping right to advance to the DONE state
-DEADLINE: <2018-11-01 Thu ++1w>
+   DEADLINE: <2019-01-03 Thu ++1w>
+   :PROPERTIES:
+   :LAST_REPEAT: [2019-12-08 Sun 11:19]
+   :END:
+   - State "DONE"       from "TODO"       [2019-12-08 Sun 11:19]
 * Capture
 organice supports something like org-capture in the form of customizable, quickly accessible buttons for creating new headers.
 
