doc: Move Docker build above Heroku
     Document how to build your own image.

--- a/README.org
+++ b/README.org
@@ -263,6 +263,40 @@ END_SCRIPT
 exit 0
 #+END_SRC
 
+*** Docker
+
+organice is also available as a Docker image.
+
+**** With =docker-compose=
+
+If [[https://docs.docker.com/compose/][docker-compose]] is installed, the following command downloads and
+runs the latest image automatically.
+
+#+BEGIN_SRC shell
+docker-compose up -d
+#+END_SRC
+
+The webserver is listening on port 5000 and can be reached here:
+http://localhost:5000
+
+If you want to build the image yourself, use the
+=docker-compose-dev.yaml= file:
+
+#+BEGIN_SRC shell
+docker-compose -f docker-compose-dev.yaml up
+#+END_SRC
+
+**** Without docker-compose
+
+If =docker-compose= is not installed the command looks like this:
+
+#+BEGIN_SRC shell
+docker run -p 5000:5000 -t organice twohundredok/organice:latest
+#+END_SRC
+
+Again the webserver is listening on port 5000 and can be reached here:
+http://localhost:5000
+
 *** Heroku
 Assuming, you have an account and have installed the [[https://devcenter.heroku.com/articles/heroku-cli][command line
 tools]], deployment is as easy as:
@@ -306,33 +340,6 @@ RewriteRule ^ - [L]
 RewriteRule ^ /index.html [L]
 #+END_EXAMPLE
 
-  *
-*** Docker
-Organice is also available as a docker image.
-
-**** with docker-compose
-
-If [[https://docs.docker.com/compose/][docker-compose]] is installed the following command downloads and runs the
-latest image automatically.
-
-#+BEGIN_SRC shell
-docker-compose up -d
-#+END_SRC
-
-The webserver is listening on port 5000 and can be reached here:
-http://localhost:5000
-
-**** Without docker-compose
-
-If docker-compose is not installed the command looks like this:
-
-#+BEGIN_SRC shell
-docker run -p 5000:5000 -t organice twohundredok/organice:latest
-#+END_SRC
-
-Again the webserver is listening on port 5000 and can be reached here:
-http://localhost:5000
-  
 ** Capture templates
 
 organice supports capture templates by implementing a flexible
